<resources>
    <string name="app_name">Manchester</string>
    <string name="title_activity_location_placea">Map</string>
    <string name="developer">Developed By</string>
    <string name="caffeeName">Manchester Cafe</string>
    <string name="caffeeNum">01020988886</string>
    <string name="caffeePage">www.facebook.com/manchestermasr</string>
    <string name="call">Call</string>
    <string name="title_activity_home_menu">HomeMenuActivity</string>
    <string name="small_size">SM</string>
    <string name="medium_size">ME</string>
    <string name="large_size">LA</string>
    <string name="title_activity_develope_by">Developed By</string>
    <string name="company_tele">01117712 974</string>
    <string name="company_name">Spot Application</string>
    <string name="company_add">Address : </string>
    <string name="company_page">www.facebook.com/mohammed.f.shawky</string>
    <string name="facebook_page"> Facebook : </string>
    <string name="facebook_pagebtn">Facebook</string>
    <string name="tele_num">Telephone : </string>
    <string name="first_branch">Branch Sherbien :</string>
    <string name="time_work_first_branch">Time of work :</string>
    <string name="lang">Language</string>
    <string name="website">Website :</string>
    <string name="websitebtn">Website</string>
    <string name="email">Email :</string>
    <string name="emailbtn">Email</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="share_app">Share With Friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>
    <!--Meuns navigation-->
    <string name="contact_us">Contact Us</string>
    <string name="reseved_table">Reserve Table</string>
    <string name="bar_code">Share Application</string>
    <string name="menus_food">Menus</string>
    <string name="developed_by">Developed By</string>
    <string name="branch">Branches</string>
    <string name="offers_events">Offer / Events</string>


    <string name="italian_pizza">Italian Pizza</string>
    <string name="meat_man">Meat</string>
    <string name="chick_man">Chickens</string>
    <string name="sea_food_man">Sea Food</string>
    <string name="cheese_man">Cheese</string>
    <string name="sweet_man">Sweet</string>
    <!--Grid Item-->
    <string-array name="grid_view">
        <item>@string/italian_pizza</item>
        <item>@string/meat_man</item>
        <item>@string/chick_man</item>
        <item>@string/sea_food_man</item>
        <item>@string/cheese_man</item>
        <item>@string/sweet_man</item>
    </string-array>
    <!--List Item-->
    <string-array name="italian_pizza_array">
        <item>مارجاريتا</item>
        <item>رومى</item>
        <item>خضروات</item>
        <item>مانشستر جبن</item>
        <item>سوسيس</item>
        <item>سجق</item>
        <item>سلامى</item>
        <item>ببرونى</item>
        <item>نابوليان</item>
        <item>مفروم</item>
        <item>بسطرمة</item>
        <item>فورسيزون</item>
        <item>شاورما لحم</item>
        <item>شاورما دجاج</item>
        <item>شيش طاووق</item>
        <item>سوبريم</item>
        <item>كرانشى</item>
        <item>كوردن بلو</item>
        <item>جمبرى</item>
        <item>سيبيا</item>
        <item>كابوريا</item>
        <item>فياجرا مانشستر</item>
        <item>ستافت كراست إضافة</item>
        <item>دبل ستافت كراست إضافة</item>
    </string-array>
    <string-array name="chick_man_array">
        <item>تشكن برجر</item>
        <item>فاهيتا دجاج</item>
        <item>بانيه</item>
        <item>كرانشى</item>
        <item>سوبر كرانشى</item>
        <item>زنجر</item>
        <item>زنجر سوبريم</item>
        <item>صدور مشوى</item>
        <item>استربس</item>
        <item>فرايداى</item>
        <item>كوردن بلو</item>
        <item>ألاكيف</item>
        <item>شاورما دجاج</item>
        <item>مانشستر دجاج</item>
    </string-array>
    <string-array name="meat_man_array">
        <item>برجر</item>
        <item>تشيز برجر</item>
        <item>برجر بيض</item>
        <item>مانشستر برجر</item>
        <item>سوسيس</item>
        <item>هوت دوج بكينى</item>
        <item>هوت دوج مكسيكى</item>
        <item>كفته ع الفجم</item>
        <item>فاهيتا لحم</item>
        <item>روز بيف</item>
        <item>بيكاتا</item>
        <item>كبده</item>
        <item>مانشستر لحوم</item>
    </string-array>
    <string-array name="sea_food_man_array">
        <item>جمبرى</item>
        <item>سيبيا</item>
        <item>فياجرا مانشستر</item>
    </string-array>
    <string-array name="sweet_man_array">
        <item>شيكولاته بندق</item>
        <item>خوخ</item>
        <item>أناناس</item>
        <item>مانشستر فواكه</item>
    </string-array>
    <string-array name="cheese_man_array">
        <item>رومى</item>
        <item>شيدر</item>
        <item>موتزريلا</item>
        <item>كيرى</item>
        <item>مانشستر جبن</item>
    </string-array>
</resources>
