<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_conatct_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context="com.farid.mohammed.manchesterapp.ConatctUsActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Contact Us"
        android:textColor="@color/white"
        android:textSize="20dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/facebook_page"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/facebtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryLight"
            android:gravity="center"
            android:text="@string/facebook_pagebtn"></Button>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tele"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/tele_num"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textTelee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/caffeeNum"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/webbtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryLight"
            android:gravity="center"
            android:text="@string/websitebtn"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/emailbtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryLight"
            android:gravity="center"
            android:text="@string/emailbtn"></Button>
    </LinearLayout>
</LinearLayout>
