<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context="com.farid.mohammed.manchesterapp.DevelopeByActivity">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/company_name"
            android:text="@string/company_name"
            android:textSize="30dp"
            android:textColor="@color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:text="@string/facebook_page"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:id="@+id/facepage"
                android:text="@string/company_page"
                android:textSize="15dp"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:id="@+id/tele"
                android:text="@string/tele_num"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:id="@+id/company_tele"
                android:text="@string/company_tele"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:id="@+id/company_call"
                android:text="@string/callCafe"
                android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
                />
        </LinearLayout>
    </LinearLayout>

    <fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" />
</LinearLayout>