<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reserve_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context="com.farid.mohammed.manchesterapp.ReserveTableActivity">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="Reserve "
    android:textSize="20dp"
    android:textColor="@color/white"
    android:gravity="center">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/first_branch"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/tele"
                android:text="@string/tele_num"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:id="@+id/callbtncenter"
                android:text="@string/call"
                android:background="@color/colorPrimaryLight"
                />

    </LinearLayout>

</LinearLayout>
